Add Slack notifications to GitHub Actions workflow
Add Slack notifications to GitHub Actions workflow.

* **README.md**
  - Add a section to explain the Slack notification configuration.
  - Mention the `slackapi/slack-github-action` usage for notifications.

* **.github/workflows/python-app.yml**
  - Add a step to notify Slack on build success.
  - Add a step to notify Slack on build failure.
  - Use `slackapi/slack-github-action` for Slack notifications.

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,3 +37,17 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: Notify Slack on build success
+      if: success()
+      uses: slackapi/slack-github-action@v1.25.0
+      with:
+        payload: '{"text":"Build completed successfully!"}'
+        channel: '#alerts'
+        token: ${{ secrets.SLACK_BOT_TOKEN }}
+    - name: Notify Slack on build failure
+      if: failure()
+      uses: slackapi/slack-github-action@v1.25.0
+      with:
+        payload: '{"text":"Build failed!"}'
+        channel: '#alerts'
+        token: ${{ secrets.SLACK_BOT_TOKEN }}
