--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 langchain==0.2.5
 streamlit==1.37.0
-openai
+openai==0.27.0
 python-dotenv==1.0.0
 langchain-openai==0.1.0
+beautifulsoup4==4.10.0
+requests==2.26.0
